cmake_minimum_required(VERSION 3.2.6)

add_subdirectory(ex0101-fileIO)
add_subdirectory(ex0102-fileIO)
add_subdirectory(ex0103-fileIO)

add_subdirectory(ex0201-fileStream)
add_subdirectory(ex0202-fileStream)
add_subdirectory(ex0203-fileOffset)
add_subdirectory(ex0204-fgetc_fputc)
add_subdirectory(ex0205-fgets_fputs)