cmake_minimum_required(VERSION 3.2.6)


add_subdirectory(ex0201-fileStream)
add_subdirectory(ex0202-fileStream)
add_subdirectory(ex0203-fileOffset)
add_subdirectory(ex0204-fgetc_fputc)
add_subdirectory(ex0205-fgets_fputs)
add_subdirectory(ex0206-fread_fwrite)
add_subdirectory(ex0207-utilityWC-version1)
add_subdirectory(ex0208-utilityWC-version2)
add_subdirectory(ex0209-utility-cp)
add_subdirectory(ex0210-utility-merge-version1)
add_subdirectory(ex0211-utility-extract)