cmake_minimum_required(VERSION 3.2.6)

add_subdirectory(ex0101-standardIO)
add_subdirectory(ex0102-systemcallIO)
add_subdirectory(ex0103-systemcallFileOffsetVersion1)
add_subdirectory(ex0104-systemCallFileOffsetVersion2)
add_subdirectory(ex0201-systemCallDuplicated)
add_subdirectory(ex0202-systemCallRedirection)
add_subdirectory(ex0203-systemCallRedirectionReadMode)
add_subdirectory(ex0204-systemCallCatUtility)