cmake_minimum_required(VERSION 3.2.6)

add_subdirectory(ex0101-fileState)
add_subdirectory(ex0102-filePermission)
add_subdirectory(ex0103-fileLinkedList)
add_subdirectory(ex0104-fileUidGid)
add_subdirectory(ex0105-fileGetTime)
add_subdirectory(ex0106-lsUtilConditionalCharBlockAndBlock)
add_subdirectory(ex0201-directoryBasic)
add_subdirectory(ex0202-directoryStructure)
add_subdirectory(ex0203-directoryLsUtility)
add_subdirectory(ex0204-directoryLsUtilitySplit)