cmake_minimum_required(VERSION 3.2.6)

add_subdirectory(ex0101-processFork)
add_subdirectory(ex0102-forkBasic)
add_subdirectory(ex0103-forkMultiProcessing-defunct)
add_subdirectory(ex0201-zombieProcessPrevent)
add_subdirectory(ex0202-signal)
add_subdirectory(ex0203-signalProblem)
add_subdirectory(ex0301-sigaction)
add_subdirectory(ex0401-processCallSystem)
add_subdirectory(ex0402-execlFunction)
add_subdirectory(ex0403-execvFunction)
add_subdirectory(ex0404-execveFunction)
add_subdirectory(ex0405-execlpFunction)