cmake_minimum_required(VERSION 3.2.6)

add_subdirectory(ex0101-processCallSystem)
add_subdirectory(ex0102-execlFunction)
add_subdirectory(ex0103-execvFunction)
add_subdirectory(ex0104-execveFunction)
add_subdirectory(ex0105-execlpFunction)
add_subdirectory(ex0201-execveFunction)
add_subdirectory(ex0202-execveFunctionAfterNotDeadCode)
add_subdirectory(ex0203-mySystemFunction)
add_subdirectory(ex0301-waitExitProcessHandle)
add_subdirectory(ex0302-waitExitAbnormalProcessHandle)
add_subdirectory(ex0303-waitExitAbnormalProcessHandleCoreDump)
add_subdirectory(ex0304-waitExitAbnormalProcessHandle)