cmake_minimum_required(VERSION 3.2.6)

add_subdirectory(ex0101-process-review)
add_subdirectory(ex0102-pthread-basic)
add_subdirectory(ex0103-process-global)
add_subdirectory(ex0104-thread-global)
add_subdirectory(ex0201-process-error-handling)
add_subdirectory(ex0202-thread-error-handling)
add_subdirectory(ex0203-custom-error-handling)
add_subdirectory(ex0301-thread-mutex-basic)
add_subdirectory(ex0302-thread-condition-variable)
add_subdirectory(ex0401-pthread-not-using-alarm)
add_subdirectory(ex0402-process-version-alarm)
add_subdirectory(ex0403-thread-version-alarm)