cmake_minimum_required(VERSION 3.2.6)

add_subdirectory(ex0101-strtok)
add_subdirectory(ex0102-pthread-strtok)
add_subdirectory(ex0201-pthread-strtok-re-entry)
add_subdirectory(ex0202-pthread-re-entry-basic)
add_subdirectory(ex0203-pthread-re-entry-using-pthread-key)
add_subdirectory(ex0301-readline-client)
add_subdirectory(ex0301-readline-server)