cmake_minimum_required(VERSION 3.2.6)

add_subdirectory(ex0101-signal-handle-basic)
add_subdirectory(ex0102-signal-handle-catch-function)
add_subdirectory(ex0103-signal-handle-user-custom)
add_subdirectory(ex0104-signal-handle-parent-catch-signal)
add_subdirectory(ex0104-signal-handle-child-catch-signal)